@@ -115,3 +115,4 @@
 [2024-03-20] [12:45] [components/stock-summary-table.tsx] Updated stock summary table to use location.label instead of bayCode
 [2024-03-20] [13:00] [.gitignore] Updated to keep Prisma migrations and better organize ignored files
 [2024-03-20] [13:15] [package.json] Added @types/lodash for TypeScript support
+[2024-03-20] [13:30] [components/barcode-scanner.tsx] Fixed type error in QR code format handling
